--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
+    "build": "npx tsc",
     "start": "node ./dist/index.js",
     "dev": "nodemon -e ts -w src --exec 'ts-node -T src/index.ts'",
     "seed": "prisma db seed"
